# miredo

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.old  Doxyfile.in  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  bootstrap  configure.ac  miredo-server.8  miredo-server.conf.5  miredo.8  miredo.conf.5
autopackage/: Makefile.am  default.apspec.in
compat/: .gitignore  Makefile.am  barrier.c  barrier.h  clearenv.c  clock_gettime.c  clock_nanosleep.c  closefrom.c  fdatasync.c  fixups.h  pselect.c  pselect.h  pthread_barrier_wait.c  strlcpy.c  test-closefrom.c  test-strlcpy.c
doc/: Makefile.am  isatapd.8-in  isatapd.conf.5  miredo-checkconf.8-in  miredo-server.8  miredo-server.8-in  miredo-server.conf.5  miredo.8  miredo.8-in  miredo.conf.5  teredo-mire.1
include/: .gitignore  Makefile.am  gettext.h  teredo.c  teredo.h
libteredo/: .cvsignore  .gitignore  Makefile.am  Makefile.in  checksum.h  clock.c  clock.h  debug.h  discovery.c  discovery.h  init.c  iothread.c  iothread.h  libteredo.sym  maintain.c  maintain.cpp  maintain.h  md5.c  mire.c  packets.c  packets.cpp  packets.h  peerlist.c  peerlist.cpp  peerlist.h  queue.cpp  queue.h  regress.c  relay-packets.cpp  relay-packets.h  relay-udp.cpp  relay-udp.h  relay.c  relay.cpp  relay.h  security.c  security.cpp  security.h  server-udp.cpp  server-udp.h  (+12 more)
libteredo/test/: .gitignore  Makefile.am  addrcmp.c  clock.c  hmac.c  list.c  md5test.c  stresslist.c  teredo.c  unit.c  v4global.c
libtun6/: .cvsignore  .gitignore  Makefile.am  diag.c  diagnose.c  ipv6-tunnel.cpp  ipv6-tunnel.h  test_diag.c  tun6.c  tun6.h
m4/: Makefile.am  binreloc.m4  flags.m4  getopt.m4  hostname.m4  sockaddr.m4
misc/: .gitignore  Makefile.am  TeredoClient.reg  TeredoPrefix.reg  client-hook.bsd  client-hook.iproute  isatapd.conf  isatapd.conf-in  miredo  miredo-server.conf  miredo-server.conf-dist  miredo-server.conf-in  miredo-server.in  miredo-server.sh  miredo-server.sh-in  miredo.conf  miredo.conf-dist  miredo.conf-in  miredo.in  miredo.sh
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  en.po  en_GB.po  fr.po  miredo.pot
src/: .cvsignore  .gitignore  Makefile.am  addrwatch.c  addrwatch.h  binreloc.c  binreloc.h  checkconf.c  checkconf.cpp  common_pkt.cpp  common_pkt.h  conf.c  conf.cpp  conf.h  ipv6-tunnel.cpp  ipv6-tunnel.h  isatap.c  isatap.cpp  isatapd.c  main.c  main.cpp  miredo.c  miredo.cpp  miredo.h  prefix.h  privproc.c  privproc.cpp  privproc.h  relay.c  relay.cpp  relay.h  relayd.c  server.c  server.cpp  server.h  server_pkt.cpp  server_pkt.h  serverd.c  teredo-udp.cpp  teredo-udp.h  (+2 more)
